# cookiecutter-django-hexagonal-architecture

./: LICENSE  README.md
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/.app_template/infrastructure/django/: apps.py-tpl
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: containers.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/shared/application/: cqrs.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/shared/infrastructure/django/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/shared/infrastructure/django/management/: utility.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/shared/infrastructure/django/management/commands/: startapp.py
